finish part1: User Management Module and Profile Management Module